# dominos

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  board.cpp  board.hpp  card_button.cpp  card_button.hpp  dominos_app.cpp  dominos_app.hpp  game.cpp  game.hpp  main.cpp  main_window.cpp  main_window.hpp  player.cpp  player.hpp
src/test/: catch.hpp.crdownload
